syntax = "proto3";
option go_package = "github.com/rancher/opni/pkg/apis/control/v1";

import "google/protobuf/empty.proto";
import "github.com/rancher/opni/pkg/apis/core/v1/core.proto";
import "github.com/kralicky/totem/extensions.proto";

package control;

service Health {
  rpc GetHealth(google.protobuf.Empty) returns (core.Health);
}

service HealthListener {
  rpc UpdateHealth(core.Health) returns (google.protobuf.Empty);
}

service BackendHealth {
  rpc GetHealth(google.protobuf.Empty) returns (core.BackendHealth);
}

service BackendHealthListener {
  rpc UpdateHealth(core.BackendHealth) returns (google.protobuf.Empty);
}

service PluginSync {
  rpc SyncPluginManifest(PluginManifest) returns (SyncResults);
  rpc GetPluginManifest(google.protobuf.Empty) returns (PluginManifest);
}

enum PatchOp {
  // revisions match
  None = 0;
  // same plugin exists on both
  Update = 1;
  // missing plugin on agent
  Create = 2;
  // outdated plugin on agent, with no version on the gateway
  Remove = 3;
  // same plugin contents and module name, but the file name is different
  Rename = 4;
}

message SyncResults {
  PluginManifest desiredState = 1;
  PatchList requiredPatches = 2;
}

message PluginManifestEntry {
  string module = 1;
  string filename = 2;
  string digest = 3;
}

message PluginManifest {
  repeated PluginManifestEntry items = 1;
}

message PluginArchiveEntry {
  PluginManifestEntry metadata = 1;
  bytes data = 2;
}

message PluginArchive {
  repeated PluginArchiveEntry items = 1;
}

// opPath should be empty when op == PatchRename
// bytes should be empty when op == PatchRemove
message PatchSpec {
  string module = 1;
  PatchOp op = 2;
  bytes data = 3;
  string filename = 4;
  string oldDigest = 5;
  string newDigest = 6;
}

message PatchList {
  repeated PatchSpec items = 1;
}
